[package]
name = "fracas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.22.1", features = ["event-stream"] }
fastrand = "1.7.0"
futures = "0.3.19"
futures-timer = "3.0.2"

[dependencies.async-std]
version = "1.10.0"
features = ["attributes"]