[package]
name = "fracas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.22.1", features = ["event-stream","serde"] }
fastrand = "1.7.0"
futures = "0.3.19"
futures-timer = "3.0.2"
bincode = "1.3.3"
serde = { version = "1.0.136", features = ["derive"] }

[dependencies.async-std]
version = "1.10.0"
features = ["attributes"]
